// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Excalidraw/> > <MainMenu/> > should render main menu with host menu items if passed from host 1`] = `
<div
  aria-labelledby="radix-_r_4q_"
  aria-orientation="vertical"
  class="dropdown-menu main-menu"
  data-align="start"
  data-orientation="vertical"
  data-radix-menu-content=""
  data-side="bottom"
  data-state="open"
  data-testid="dropdown-menu"
  dir="ltr"
  id="radix-_r_4r_"
  role="menu"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: none;"
  tabindex="-1"
>
  <div
    class="Island dropdown-menu-container"
    style="--padding: 2;"
  >
    <button
      class="radix-menu-item dropdown-menu-item dropdown-menu-item-base"
      data-orientation="vertical"
      data-radix-collection-item=""
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="dropdown-menu-item__text"
      >
        <span
          style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
        >
          Click me
        </span>
      </div>
    </button>
    <a
      class="radix-menu-item dropdown-menu-item dropdown-menu-item-base"
      data-orientation="vertical"
      data-radix-collection-item=""
      href="blog.excalidaw.com"
      rel="noopener noopener"
      role="menuitem"
      tabindex="-1"
      target="_blank"
    >
      <div
        class="dropdown-menu-item__text"
      >
        <span
          style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
        >
          Excalidraw blog
        </span>
      </div>
    </a>
    <div
      class="dropdown-menu-item-base dropdown-menu-item-custom"
    >
      <button
        style="height: 2rem;"
      >
        custom menu item
      </button>
    </div>
    <button
      aria-label="Help"
      class="radix-menu-item dropdown-menu-item dropdown-menu-item-base"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-testid="help-menu-item"
      role="menuitem"
      tabindex="-1"
      title="Help"
    >
      <div
        class="dropdown-menu-item__icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          focusable="false"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <g
            stroke-width="1.5"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <circle
              cx="12"
              cy="12"
              r="9"
            />
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="17.01"
            />
            <path
              d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4"
            />
          </g>
        </svg>
      </div>
      <div
        class="dropdown-menu-item__text"
      >
        <span
          style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
        >
          Help
        </span>
      </div>
      <div
        class="dropdown-menu-item__shortcut"
      >
        ?
      </div>
    </button>
  </div>
</div>
`;

exports[`<Excalidraw/> > Test UIOptions prop > Test canvasActions > should render menu with default items when "UIOPtions" is "undefined" 1`] = `
<div
  aria-labelledby="radix-_r_q_"
  aria-orientation="vertical"
  class="dropdown-menu main-menu"
  data-align="start"
  data-orientation="vertical"
  data-radix-menu-content=""
  data-side="bottom"
  data-state="open"
  data-testid="dropdown-menu"
  dir="ltr"
  id="radix-_r_r_"
  role="menu"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: none;"
  tabindex="-1"
>
  <div
    class="Island dropdown-menu-container"
    style="--padding: 2;"
  >
    <button
      aria-label="Open"
      class="radix-menu-item dropdown-menu-item dropdown-menu-item-base"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-testid="load-button"
      role="menuitem"
      tabindex="-1"
      title="Open"
    >
      <div
        class="dropdown-menu-item__icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          focusable="false"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          viewBox="0 0 20 20"
        >
          <path
            d="m9.257 6.351.183.183H15.819c.34 0 .727.182 1.051.506.323.323.505.708.505 1.05v5.819c0 .316-.183.7-.52 1.035-.337.338-.723.522-1.037.522H4.182c-.352 0-.74-.181-1.058-.5-.318-.318-.499-.705-.499-1.057V5.182c0-.351.181-.736.5-1.054.32-.321.71-.503 1.057-.503H6.53l2.726 2.726Z"
            stroke-width="1.25"
          />
        </svg>
      </div>
      <div
        class="dropdown-menu-item__text"
      >
        <span
          style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
        >
          Open
        </span>
      </div>
      <div
        class="dropdown-menu-item__shortcut"
      >
        Ctrl+O
      </div>
    </button>
    <button
      aria-label="Save to..."
      class="radix-menu-item dropdown-menu-item dropdown-menu-item-base"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-testid="json-export-button"
      role="menuitem"
      tabindex="-1"
      title="Save to..."
    >
      <div
        class="dropdown-menu-item__icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          focusable="false"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          viewBox="0 0 20 20"
        >
          <path
            d="M3.333 14.167v1.666c0 .92.747 1.667 1.667 1.667h10c.92 0 1.667-.746 1.667-1.667v-1.666M5.833 9.167 10 13.333l4.167-4.166M10 3.333v10"
            stroke-width="1.25"
          />
        </svg>
      </div>
      <div
        class="dropdown-menu-item__text"
      >
        <span
          style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
        >
          Save to...
        </span>
      </div>
    </button>
    <button
      aria-label="Export image..."
      class="radix-menu-item dropdown-menu-item dropdown-menu-item-base"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-testid="image-export-button"
      role="menuitem"
      tabindex="-1"
      title="Export image..."
    >
      <div
        class="dropdown-menu-item__icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          focusable="false"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <g
            stroke-width="1.25"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <path
              d="M15 8h.01"
            />
            <path
              d="M12 20h-5a3 3 0 0 1 -3 -3v-10a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v5"
            />
            <path
              d="M4 15l4 -4c.928 -.893 2.072 -.893 3 0l4 4"
            />
            <path
              d="M14 14l1 -1c.617 -.593 1.328 -.793 2.009 -.598"
            />
            <path
              d="M19 16v6"
            />
            <path
              d="M22 19l-3 3l-3 -3"
            />
          </g>
        </svg>
      </div>
      <div
        class="dropdown-menu-item__text"
      >
        <span
          style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
        >
          Export image...
        </span>
      </div>
      <div
        class="dropdown-menu-item__shortcut"
      >
        Ctrl+Shift+E
      </div>
    </button>
  </div>
</div>
`;
